--- a/style.css
+++ b/style.css
@@ -439,7 +439,8 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 20px; 
+    margin-left: 30px;
+    gap: 10px; 
   }
   .logo {
     font-size: 60px;
