--- a/style.css
+++ b/style.css
@@ -333,7 +333,7 @@ body {
 
 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 600px) {
   body {
     background-image: url("assets/pics/bg00.jpg");
     background-size: cover;
@@ -433,7 +433,7 @@ body {
   
 }
 
-@media screen and (max-width: 910px) {
+@media screen and (min-width: 601px) and (max-width: 900px) {
   .container {
     display: flex;
     flex-direction: row;
